improving tests according to Dominic's notes

--- a/custom-elements/instantiating-custom-elements/changing-is-attribute.html
+++ b/custom-elements/instantiating-custom-elements/changing-is-attribute.html
@@ -62,7 +62,7 @@ test(function() {
             'Custom element must not be changed and should be ' + obj.constructor.name);
     });
 }, 'Changing IS attribute of the custom element after element is instatiated. Test all possible values ' +
-    'of extensions of html elements as new IS value');
+    'of extensions of HTML elements as new IS value');
 </script>
 </body>
 </html>
