--- a/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/ellipse/shape-outside-ellipse-011.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/supported-shapes/ellipse/shape-outside-ellipse-011.html
@@ -6,7 +6,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="match" href="reference/shape-outside-ellipse-011-ref.html">
-        <meta name="flags" content="ahem" />
+        <meta name="flags" content="ahem dom" />
         <meta name="assert" content="The test verifies that text wraps around a
                                      left float with a shape-outside defined as
                                      an ellipse with radii in px units.">
