--- a/html/dom/documents/resource-metadata-management/document-lastModified-01.html
+++ b/html/dom/documents/resource-metadata-management/document-lastModified-01.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<meta charset=utf-8>
-<title>document.lastModified</title>
-<link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<link rel=help href="http://www.w3.org/html/wg/drafts/html/master/#resource-metadata-management">
+<title>document.lastModified should return current time</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
 <script>
-  test(function(){
-    var date = new Date();
-    var result = date.toLocaleDateString() + " " + [date.getHours(),date.getMinutes(),date.getSeconds()].map(function(n){return ("0" + n).slice(-2);}).join(":");
-    assert_equals(document.lastModified, result);
-  }, "lastModified should return current date if the last modified date and time are unknown");
+  var t = async_test("If the last modification date of the document is not known, the current time should be returned instead.");
+  var previousSeconds = document.lastModified.substring(17,20);
+  setTimeout(function() {
+    t.step(function() {
+      assert_not_equals(document.lastModified.substring(17,20), previousSeconds);
+      t.done();
+    });
+  }, 1000);
 </script>
