--- a/custom-elements/instantiating-custom-elements/non-configurable-constructor-property.html
+++ b/custom-elements/instantiating-custom-elements/non-configurable-constructor-property.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>if prototype has a non-configurable property named constructor, Document.registerElement() throws NotSupportedError</title>
+<title>If prototype has a non-configurable property named constructor, Document.registerElement() throws NotSupportedError</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="assert" content="If  PROTOTYPE has a non-configurable property named constructor, throw a NotSupportedError and stop">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
