--- a/custom-elements/instantiating-custom-elements/custom-element-constructor-local-name.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-constructor-local-name.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Custom element local name should be the name from custom element definition</title>
+<title>Custom element constructor sets local name to the name from custom element definition</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
-<meta name="assert" content="When custom element constructor is called then custom element's name should be set to local name in element definition">
+<meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
+<meta name="assert" content="Set ELEMENT's local name to NAME">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -18,8 +19,8 @@ test(function() {
     var GeneratedConstructor = doc.registerElement('x-a');
     var customElement = new GeneratedConstructor();
     assert_equals(customElement.localName, 'x-a',
-        'Custom element local name should be the name from custom element definition');
-}, 'Custom element local name should be the name from custom element definition');
+        'Custom element local name should be equal to the name in custom element definition');
+}, 'Custom element constructor sets local name to the name from custom element definition');
 
 
 test(function() {
@@ -35,9 +36,9 @@ test(function() {
         var customElement = new GeneratedConstructor();
 
         assert_equals(customElement.localName, tagName,
-            'Custom element local name should be the name from custom element definition');
+            'Custom element local name should be equal to the name in custom element definition');
     });
-}, 'Custom element local name should be the name from custom element definition. ' +
+}, 'Custom element constructor sets local name to the name from custom element definition. ' +
     'Test constructor of extended HTML element');
 </script>
 </body>
