--- a/custom-elements/instantiating-custom-elements/custom-element-constructor-namespace.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-constructor-namespace.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Custom element local namespace should be the namespace in custom element definition</title>
+<title>Custom element constructor sets local namespace to the namespace from custom element definition</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
-<meta name="assert" content="When custom element constructor is called then custom element's namespace should be set to namespace in element definition">
+<meta name="assert" content="Custom element constructor sets custom element namespace to the namespace in custom element definition">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -18,8 +18,8 @@ test(function() {
     var GeneratedConstructor = doc.registerElement('x-a');
     var customElement = new GeneratedConstructor();
     assert_equals(customElement.namespaceURI, HTML_NAMESPACE,
-        'Custom element namespace should be namespace in custom element definition');
-}, 'Custom element namespace should be the namespace in custom element definition');
+        'Custom element namespace should be equal to namespace in custom element definition');
+}, 'Custom element constructor sets namespace to the namespace from custom element definition');
 
 
 test(function() {
@@ -35,9 +35,9 @@ test(function() {
         var customElement = new GeneratedConstructor();
 
         assert_equals(customElement.namespaceURI, HTML_NAMESPACE,
-            'Custom element namespace should be namespace in custom element definition');
+            'Custom element namespace should be equal to namespace in custom element definition');
     });
-}, 'Custom element namespace should be the namespace in custom element definition. ' +
+}, 'Custom element constructor sets namespace to the namespace from custom element definition. ' +
     'Test constructor of extended HTML element');
 </script>
 </body>
