--- a/custom-elements/instantiating-custom-elements/custom-element-type-local-name-and-is-attribute.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-type-local-name-and-is-attribute.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Custom element type is the local name of the custom element even if IS attribute provided</title>
+<title>Instantiation of custom element: the custom tag must win over the type extension</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
+<meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
 <meta name="assert" content="If both types of custom element types are provided at the time of element's instantiation, the custom tag must win over the type extension">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
 <script src="/resources/testharness.js"></script>
@@ -15,16 +16,15 @@
 <script type="text/javascript">
 test(function() {
     var doc = newHTMLDocument();
-    doc.registerElement('x-a');
+    var GeneratedConstructor = doc.registerElement('x-a');
     doc.registerElement('x-b');
     doc.body.innerHTML = '<x-a id="x-a" is="x-b"></x-a>';
     var customElement = doc.querySelector('#x-a');
-    assert_equals(customElement.constructor.prototype.constructor.name,
-        customElement.localName,
-        'Custom element type should be the local name of the custom element');
-    assert_equals(customElement.constructor.prototype.constructor.name, 'x-a',
-        'Custom element type should be correct local name of the custom element');
-}, 'Custom element type is the local name of the custom element even if IS attribute provided.');
+
+    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
+        'Custom element type should be the type, specified in the local name of the element');
+}, 'Custom element type must be taken from the local name of the element even ' +
+    'if IS attribute provided.');
 
 
 test(function() {
@@ -32,40 +32,32 @@ test(function() {
     doc.registerElement('x-d');
     doc.body.innerHTML = '<x-c id="x-c" is="x-d"></x-c>';
     var customElement = doc.querySelector('#x-c');
-    assert_equals(customElement.constructor.prototype.constructor.name, 'HTMLElement',
-        'Custom element type should be HTMLElement');
 
-    doc.registerElement('x-c');
-    assert_equals(customElement.constructor.prototype.constructor.name,
-        customElement.localName,
-        'Custom element type should be the local name of the custom element');
-    assert_equals(customElement.constructor.prototype.constructor.name, 'x-c',
-        'Custom element type should be correct local name of the custom element');
-}, 'Custom element type is the local name of the custom element even if IS attribute provided. ' +
-    'Custom element is unresolved at first');
+    var GeneratedConstructor = doc.registerElement('x-c');
+    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
+        'Custom element type should be the type, specified in the local name of the element');
+}, 'Custom element type must be taken from the local name of the element even ' +
+    'if IS attribute provided. Custom element is unresolved at first');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    doc.registerElement('x-f');
+    var GeneratedConstructor = doc.registerElement('x-f');
     doc.body.innerHTML = '<x-f id="x-f" is="x-e"></x-f>';
     var customElement = doc.querySelector('#x-f');
-    assert_equals(customElement.constructor.prototype.constructor.name, 'x-f',
-        'Custom element type should be local name of the custom element');
+    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
+        'Custom element type should be the type, specified in local name of the element');
 
     doc.registerElement('x-e');
-    assert_equals(customElement.constructor.prototype.constructor.name,
-        customElement.localName,
-        'Custom element type should be the local name of the custom element');
-    assert_equals(customElement.constructor.prototype.constructor.name, 'x-f',
-        'Custom element type should be correct local name of the custom element');
-}, 'Custom element type is the local name of the custom element even if IS attribute provided. ' +
-    'There\'s no definition for the value of IS attribute at first');
+    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
+        'Custom element type should be the type, specified in local name of the element');
+}, 'Custom element type must be taken from the local name of the element even if IS ' +
+    'attribute provided. There\'s no definition for the value of IS attribute at first');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    doc.registerElement('x-element');
+    var GeneratedConstructor = doc.registerElement('x-element');
     HTML5_ELEMENTS.forEach(function(tagName) {
         var obj = doc.createElement(tagName);
         var name = 'x-d-' + tagName;
@@ -75,14 +67,12 @@ test(function() {
         });
         doc.body.innerHTML = '<x-element id="x-element" is="' + name + '"></x-element>';
         var customElement = doc.querySelector('#x-element');
-        assert_equals(customElement.constructor.name,
-            customElement.localName,
+        assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
             'Custom element type should be the local name of the custom element');
-        assert_equals(customElement.constructor.name, 'x-element',
-            'Custom element type should be correct local name of the custom element');
     });
-}, 'Custom element type is the local name of the custom element even if IS attribute provided. ' +
-    'Test extension of all HTML5 elements');
+}, 'Custom element type must be taken from the local name of the element even ' +
+    'if IS attribute provided. IS attribute refers to another custom element type, ' +
+    'which extends HTML5 elements');
 
 
 test(function() {
@@ -101,12 +91,12 @@ test(function() {
         var customElement = doc.querySelector('#' + id);
         // We have <x-e-a is='y-element'>. Custom element type for this will be
         // HTMLElement, not x-e-a (for x-e-a there should be <a is='x-e-a'>...)
-        assert_equals(customElement.constructor.name, 'HTMLElement',
+        assert_class_string(customElement, 'HTMLElement',
             'Custom element type should be HTMLElement');
     });
-}, 'Custom element type is the local name of the custom element even if IS attribute provided. ' +
-    'Test that prototype is HTMLElement even if there\'s a custom element definition for the tag name ' +
-    'but the definition is for a type extension');
+}, 'Custom element type must be taken from the local name of the custom element even ' +
+    'if IS attribute provided. The element extends HTML5 elements, IS attribute refers ' +
+    'to another custom element type.');
 </script>
 </body>
 </html>
