--- a/custom-elements/instantiating-custom-elements/custom-element-type-local-name.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-type-local-name.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Custom element type is the local name of the custom element</title>
+<title>Instantiation of custom element: custom element type is given via the local name of the custom element</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
-<meta name="assert" content="The custom element type can be given to a custom element at the time of its instantation as the local name of the custom element">
+<meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
+<meta name="assert" content="The custom element type is given to a custom element at the time of its instantation in one of the two ways: 1. As the local name of the custom element.">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -16,31 +17,22 @@
 test(function() {
     var doc = newHTMLDocument();
     var GeneratedConstructor = doc.registerElement('x-a');
-    var customElement = new GeneratedConstructor();
-    assert_equals(customElement.constructor.prototype.constructor.name,
-        customElement.localName,
-        'Custom element type should be the local name of the custom element');
-}, 'Custom element type is the local name of the custom element. ' +
-    'Custom element created via constructor');
-
-
-test(function() {
-    var doc = newHTMLDocument();
-    doc.registerElement('x-b');
-    doc.body.innerHTML = '<x-b id="x-b"></x-b>';
-    var customElement = doc.querySelector('#x-b');
-    assert_equals(customElement.constructor.prototype.constructor.name, customElement.localName,
-        'Custom element type should be the local name of the custom element');
-}, 'Custom element type is the local name of the custom element.' +
+    doc.body.innerHTML = '<x-a id="x-a"></x-a>';
+    var customElement = doc.querySelector('#x-a');
+    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
+        'Custom element type should be the type, specified by the local name of ' +
+        'the custom element');
+}, 'Test custom element type, which is given via the local name of the custom element. ' +
     'Custom element created via innerHTML property');
 
 
 testInIFrame('../resources/x-element.html', function(doc) {
-    doc.registerElement('x-element');
+    var GeneratedConstructor = doc.registerElement('x-element');
     var xelement = doc.querySelector('#x-element');
-    assert_equals(xelement.constructor.prototype.constructor.name, xelement.localName,
-        'Custom element type should be the local name of the custom element');
-}, 'Custom element type is the local name of the custom element. ' +
+    assert_equals(Object.getPrototypeOf(xelement), GeneratedConstructor.prototype,
+        'Custom element type should be the type, specified by the local name of ' +
+        'the custom element');
+}, 'Test custom element type, which is given via the local name of the custom element. ' +
     'Custom element is defined in loaded HTML document');
 </script>
 </body>
