Replace iframe with data URI

--- a/web-animations/animation-timeline/animation-timeline.html
+++ b/web-animations/animation-timeline/animation-timeline.html
@@ -3,7 +3,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
-<iframe src="support/iframe.html" width="10" height="10" id="iframe"></iframe>
+<iframe src="data:text/html;charset=utf-8,%3Chtml%3E%3C%2Fhtml%3E" width="10" height="10" id="iframe"></iframe>
 <script>
 
 test(function() {
