--- a/webmessaging/event.source.xorigin.sub.htm
+++ b/webmessaging/event.source.xorigin.sub.htm
@@ -9,7 +9,7 @@
 <div id=log></div>
 
 <div style="display:none">
-    <iframe width="70%" onload="PostMessageTest()" src="http://www1.w3c-test.org/webapps/WebMessaging/tests/submissions/Microsoft/support/ChildWindowPostMessage.htm"></iframe>
+    <iframe width="70%" onload="PostMessageTest()" src="http://{{domains[www1]}}:{{ports[http][0]}}/webmessaging/support/ChildWindowPostMessage.htm"></iframe>
 </div>
 
 <script>
