Update some XHR tests to not refer to w3c-test.org

--- a/XMLHttpRequest/send-network-error-async-events.sub.htm
+++ b/XMLHttpRequest/send-network-error-async-events.sub.htm
@@ -49,7 +49,7 @@
                 });
             };
 
-            xhr.open("POST", "http://nonexistent-origin.w3c-test.org", true);
+            xhr.open("POST", "http://nonexistent-origin.{{host}}", true);
             xhr.send("Test Message");
         });
     </script>
