--- a/XMLHttpRequest/send-network-error-sync-events.sub.htm
+++ b/XMLHttpRequest/send-network-error-sync-events.sub.htm
@@ -16,7 +16,7 @@
         {
             var xhr = new XMLHttpRequest();
 
-            xhr.open("POST", "http://nonexistent-origin.{{host}}", false);
+            xhr.open("POST", "http://nonexistent-origin.{{host}}}:{{ports[http][0]}}", false);
 
             assert_throws("NetworkError", function()
             {
