--- a/IndexedDB/idbfactory_open13.htm
+++ b/IndexedDB/idbfactory_open13.htm
@@ -8,10 +8,10 @@
 <script src="support.js"></script>
 <div id="log"></div>
 <script>
-    test( function() {
-        assert_throws({name: 'TypeError'}, function() {
+    test(function() {
+        assert_throws(new TypeError(), function() {
             indexedDB.open();
         });
-    }, "IDBFactory.open() - no argument.");
+    });
 </script>
 
