Use 'new TypeError()'

--- a/IndexedDB/idbfactory_cmp2.htm
+++ b/IndexedDB/idbfactory_cmp2.htm
@@ -9,7 +9,7 @@
 <div id=log></div>
 <script>
     test( function() {
-        assert_throws({name: 'TypeError'}, function() {
+        assert_throws(new TypeError(), function() {
             indexedDB.cmp();
         });
     }, "IDBFactory.cmp() - no argument.");
