--- a/IndexedDB/idbdatabase_transaction6.htm
+++ b/IndexedDB/idbdatabase_transaction6.htm
@@ -18,7 +18,7 @@
     };
 
     open_rq.onsuccess = function(e) {
-        assert_throws({name: 'TypeError'},
+        assert_throws(new TypeError(),
             function() { db.transaction(); });
 
         t.done();
