--- a/IndexedDB/idbdatabase_createObjectStore11.htm
+++ b/IndexedDB/idbdatabase_createObjectStore11.htm
@@ -13,7 +13,7 @@ var t = async_test(),
 open_rq.onupgradeneeded = function(e) {
     var db = e.target.result;
 
-    assert_throws({name: 'TypeError'}, function() {
+    assert_throws(new TypeError(), function() {
         db.createObjectStore();
     });
 
