improving tests according to Dominic's notes

--- a/custom-elements/instantiating-custom-elements/changing-is-attribute.html
+++ b/custom-elements/instantiating-custom-elements/changing-is-attribute.html
@@ -4,7 +4,7 @@
 <title>Changing IS attribute of the custom element must not affect this element's custom element type, after element is instantiated</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
-<meta name="assert" content="After a custom element is instantiated, changing the value of the is attribute must not affect this element's custom element type">
+<meta name="assert" content="After a custom element is instantiated, changing the value of the IS attribute must not affect this element's custom element type">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
