--- a/custom-elements/instantiating-custom-elements/custom-element-type-is-attribute.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-type-is-attribute.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Instantiation of custom element: custom element type is given as the value of the is attribute</title>
+<title>Instantiation of custom element: custom element type is given as the value of the IS attribute</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
-<meta name="assert" content="The custom element type is given to a custom element at the time of its instantation in one of the two ways: ... 2. As the value of the is attribute of the custom element.">
+<meta name="assert" content="The custom element type is given to a custom element at the time of its instantation in one of the two ways: ... 2. As the value of the IS attribute of the custom element.">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -39,7 +39,7 @@ test(function() {
             'Custom element type should be the type, specified as value of IS attribute');
     });
 }, 'Instantiation of custom element: custom element type is given as the value of ' +
-    'the is attribute');
+    'the IS attribute');
 
 
 test(function() {
@@ -68,7 +68,7 @@ test(function() {
             'Custom element type should be the type, specified as value of IS attribute');
     });
 }, 'Instantiation of custom element: custom element type is given as the value ' +
-    'of the is attribute. Custom element is unresolved at first');
+    'of the IS attribute. Custom element is unresolved at first');
 </script>
 </body>
 </html>
