--- a/custom-elements/instantiating-custom-elements/custom-element-constructor-is-attribute.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-constructor-is-attribute.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Custom element constructor sets value of is attribute to custom element type, if it is not equal to name</title>
+<title>Custom element constructor sets value of IS attribute to custom element type, if it is not equal to name</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
-<meta name="assert" content="If TYPE is not the same as NAME, set the value of ELEMENT's is attribute to TYPE">
+<meta name="assert" content="If TYPE is not the same as NAME, set the value of ELEMENT's IS attribute to TYPE">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#instantiating-custom-elements">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -28,7 +28,7 @@ test(function() {
         assert_equals(customElement.getAttribute('is'), name,
             'Value of the IS attribute should be set to type');
     });
-}, 'Test constructor sets IS attribute value to type, if local name is not the same as type');
+}, 'Test that the constructor of a type extension sets the IS attribute value to the type');
 
 
 test(function() {
@@ -41,10 +41,10 @@ test(function() {
         var GeneratedConstructor = doc.registerElement(name);
         var customElement = new GeneratedConstructor();
 
-        assert_equals(customElement.getAttribute('is'), null,
-            'Value of the IS attribute should not be set');
+        assert_false(customElement.hasAttribute('is'),
+            'IS attribute should not present if local name is the same as type');
     });
-}, 'Test constructor sets IS attribute value to null, if local name is the same as type');
+}, 'Test that the constructor of a type extension does not set the IS attribute if local name is the same as type');
 </script>
 </body>
 </html>
