Make sure to include the port in websockets tests.

--- a/websockets/unload-a-document/002-1.html
+++ b/websockets/unload-a-document/002-1.html
@@ -6,14 +6,15 @@ var controller = opener || parent;
 var t = controller.t;
 var assert_equals = controller.asset_equals;
 var assert_unreached = controller.assert_unreached ;
-t.add_cleanup(function() {delete sessionStorage.second_run;});
+var uuid = controller.token;
+t.add_cleanup(function() {delete sessionStorage[uuid];});
 t.step(function() {
   // this test can fail if the document is unloaded on navigation e.g. due to OOM
-  if (sessionStorage.second_run) {
+  if (sessionStorage[uuid]) {
     assert_unreached('document was discarded');
   } else {
-    sessionStorage.second_run = 'true';
-    var ws = new WebSocket(SCHEME_AND_DOMAIN+'/echo');
+    sessionStorage[uuid] = 'true';
+    var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/echo');
     ws.onopen = t.step_func(function(e) {
 
       setTimeout(t.step_func(function() {
