--- a/html/semantics/embedded-content/the-canvas-element/security.drawImage.image.sub.html
+++ b/html/semantics/embedded-content/the-canvas-element/security.drawImage.image.sub.html
@@ -27,5 +27,5 @@ _assert_throws("SECURITY_ERR", function() { ctx.getImageData(0, 0, 1, 1); });
 
 });
 </script>
-<img src="http://{domains[www2]}}:{{ports[http][0]}}/html/tests/approved/images/yellow.png" id="yellow.png" class="resource">
+<img src="http://{{domains[www2]}}:{{ports[http][0]}}/images/yellow.png" id="yellow.png" class="resource">
 
