--- a/html/semantics/embedded-content/the-canvas-element/security.pattern.cross.sub.html
+++ b/html/semantics/embedded-content/the-canvas-element/security.pattern.cross.sub.html
@@ -35,5 +35,5 @@ ctx2.getImageData(0, 0, 1, 1);
 
 });
 </script>
-<img src="http://{domains[www2]}}:{{ports[http][0]}}/html/tests/approved/images/yellow.png" id="yellow.png" class="resource">
+<img src="http://{{domains[www2]}}:{{ports[http][0]}}/images/yellow.png" id="yellow.png" class="resource">
 
