--- a/html/semantics/embedded-content/the-canvas-element/security.reset.sub.html
+++ b/html/semantics/embedded-content/the-canvas-element/security.reset.sub.html
@@ -29,5 +29,5 @@ _assert_throws("SECURITY_ERR", function() { canvas.toDataURL(); });
 
 });
 </script>
-<img src="http://{domains[www2]}}:{{ports[http][0]}}/html/tests/approved/images/yellow.png" id="yellow.png" class="resource">
+<img src="http://{{domains[www2]}}:{{ports[http][0]}}/images/yellow.png" id="yellow.png" class="resource">
 
