--- a/media-source/SourceBuffer-abort.html
+++ b/media-source/SourceBuffer-abort.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>SourceBuffer#abort()</title>
+  <title>Check the values of appendWindowStart and appendWindowEnd after abort()</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -17,7 +17,7 @@ var video = document.querySelector('video');
 var mime = 'video/webm; codecs="vorbis,vp8"';
 
 //check the browser supports the MIME used in this test
-function canPlayType(mime) {    
+function canPlayType(mime) {
     if(video.canPlayType(mime) != 'probably') {
         this.step(function() {
             assert_unreached("Browser doesn't support the MIME used in this test.");
@@ -42,7 +42,7 @@ async_test(function(t) {
         t.done();
     });
     video.src = window.URL.createObjectURL(mediaSource);
-}, 'SourceBuffer#abort()');
+}, 'SourceBuffer#abort() : Check the values of appendWindowStart and appendWindowEnd.');
 
 </script>
 </body>
