--- a/webvtt/rendering/cues-with-video/processing-model/2_tracks.html
+++ b/webvtt/rendering/cues-with-video/processing-model/2_tracks.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="reftest-wait">
+<html>
 <title>WebVTT rendering, 2 tracks enabled at the same time</title>
 <style>
 html { overflow:hidden }
 body { margin:0 }
 </style>
-<script src="/common/reftest-wait.js"></script>
-<video width="1280" height="720" autoplay onplaying="this.onplaying = null; this.pause(); takeScreenshotDelayed(1000);">
+<script src="support/refTestWait.js"></script>
+<video width="1280" height="720" autoplay onplaying="this.onplaying = null; this.pause(); takeScreenshot();">
     <source src="/media/white.webm" type="video/webm">
     <source src="/media/white.mp4" type="video/mp4">
     <track src="support/test.vtt">
