--- a/webvtt/rendering/cues-with-video/processing-model/3_tracks.html
+++ b/webvtt/rendering/cues-with-video/processing-model/3_tracks.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html class="reftest-wait">
+<html>
 <title>WebVTT rendering, 3 tracks enabled at the same time</title>
 <style>
 html { overflow:hidden }
 body { margin:0 }
 </style>
-<script src="/common/reftest-wait.js"></script>
+<script src="support/refTestWait.js"></script>
 <video width="1280" height="720" autoplay onplaying="this.onplaying = null; this.pause(); takeScreenshot();">
     <source src="/media/white.webm" type="video/webm">
     <source src="/media/white.mp4" type="video/mp4">
