--- a/webvtt/rendering/cues-with-video/processing-model/disable_controls_reposition.html
+++ b/webvtt/rendering/cues-with-video/processing-model/disable_controls_reposition.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<html class="reftest-wait">
 <title>WebVTT rendering, cue reposition after disabling controls</title>
 <style>
 video {
@@ -13,7 +12,7 @@ video {
   color: green;
 }
 </style>
-<script src="/common/reftest-wait.js"></script>
+<script src="support/refTestWait.js"></script>
 <video autoplay controls onplaying="this.onplaying = null;
                            this.pause();
                            this.currentTime = 0;
