--- a/webvtt/rendering/cues-with-video/processing-model/dom_override_cue_text_while_paused.html
+++ b/webvtt/rendering/cues-with-video/processing-model/dom_override_cue_text_while_paused.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="reftest-wait">
+<html>
 <title>WebVTT rendering, cue text should be rerendered when overriding them using the DOM APIs while paused</title>
 <style>
 html { overflow:hidden }
@@ -9,7 +9,7 @@ body { margin:0 }
     color: green
 }
 </style>
-<script src="/common/reftest-wait.js"></script>
+<script src="support/refTestWait.js"></script>
 <script>
     function updateCue() {
         var t = document.getElementById('track');
