--- a/webvtt/rendering/cues-with-video/processing-model/media_with_controls.html
+++ b/webvtt/rendering/cues-with-video/processing-model/media_with_controls.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="reftest-wait">
+<html>
 <title>WebVTT rendering, the subtitles are moved up to correct position when controls are visible</title>
 <style>
 html { overflow:hidden }
@@ -9,7 +9,7 @@ body { margin:0 }
     color: green
 }
 </style>
-<script src="/common/reftest-wait.js"></script>
+<script src="support/refTestWait.js"></script>
 <video width="1280" height="720" autoplay controls onplaying="this.onplaying = null; this.pause(); takeScreenshot();">
     <source src="/media/white.webm" type="video/webm">
     <source src="/media/white.mp4" type="video/mp4">
