--- a/webvtt/rendering/cues-with-video/processing-model/navigate_cue_position.html
+++ b/webvtt/rendering/cues-with-video/processing-model/navigate_cue_position.html
@@ -1,26 +1,40 @@
 <!doctype html>
-<html class="reftest-wait">
 <title>WebVTT rendering, cue position after navigation</title>
-<script src="/common/reftest-wait.js"></script>
-<script src="/common/utils.js"></script>
-<style>iframe {width:100%; height:500px}</style>
+<script src="support/refTestWait.js"></script>
 <script>
-var uuid = token();
 onload = function() {
-    var frame = document.getElementsByTagName("iframe")[0].contentWindow;
-    if (sessionStorage[uuid]) {
+    if (sessionStorage.navigate_cue_position_navigated) {
         document.body.appendChild(document.createTextNode('FAIL (page reloaded after navigation)'));
-        delete sessionStorage[uuid]
-        takeScreenshotDelayed(100);
-    } else {
-        setTimeout(function() {
-            frame.location.assign('data:text/html,<body onload="setTimeout(function(){history.back()}, 100); sessionStorage[\'' + uuid + '\'] = \'true\';">x');
-            setTimeout(function() {
-                delete sessionStorage[uuid];
-                takeScreenshot();
-            }, 500);
-        }, 100);
+        delete sessionStorage.navigate_cue_position_navigated;
+        setTimeout(takeScreenshot, 100);
+        return;
     }
+    setTimeout(function() {
+        location.assign('data:text/html,<body onload="setTimeout(function(){history.back()}, 100); sessionStorage.navigate_cue_position_navigated = \'true\';">x');
+        setTimeout(function() {
+            delete sessionStorage.navigate_cue_position_navigated;
+            takeScreenshot();
+        }, 500);
+    }, 100);
 }
 </script>
-<iframe src="navigate_cue_position-1.html"></iframe>
+<style>
+video {
+  outline: solid;
+  width: 320px;
+  height: 240px;
+}
+::cue {
+  font-family: Ahem, sans-serif;
+  font-size: 50px;
+  color: green;
+}
+</style>
+<video autoplay controls onplaying="this.onplaying = null;
+                           this.pause();
+                           this.currentTime = 0;
+                           ">
+  <source src="/media/white.webm" type="video/webm">
+  <source src="/media/white.mp4" type="video/mp4">
+  <track src=support/foo.vtt>
+</video>
