--- a/webvtt/rendering/cues-with-video/processing-model/repaint.html
+++ b/webvtt/rendering/cues-with-video/processing-model/repaint.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<html class="reftest-wait">
 <title>WebVTT rendering, cue should repaint after hiding a covering abspos box</title>
 <style>
 #wrapper {
@@ -23,7 +22,7 @@ video {
 }
 </style>
 <p>You should see the word 'PASS' below.</p>
-<script src="/common/reftest-wait.js"></script>
+<script src="support/refTestWait.js"></script>
 <div id=wrapper>
   <video>
     <source src="/media/white.webm" type="video/webm">
