Make quote marks consistent

--- a/web-animations/animation-timeline/animation-timeline.html
+++ b/web-animations/animation-timeline/animation-timeline.html
@@ -16,8 +16,8 @@ interface AnimationTimeline {
 test(function() {
   var idlArray = new IdlArray();
   idlArray.add_idls(
-    document.getElementById("AnimationTimeline-IDL").textContent);
-  idlArray.add_objects( { AnimationTimeline: ["document.timeline"] } );
+    document.getElementById('AnimationTimeline-IDL').textContent);
+  idlArray.add_objects( { AnimationTimeline: ['document.timeline'] } );
   idlArray.test();
 },
 'document.timeline IDL tests',
