improving tests according to Dominic's notes

--- a/custom-elements/instantiating-custom-elements/custom-element-constructor-is-attribute.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-constructor-is-attribute.html
@@ -44,7 +44,7 @@ test(function() {
         assert_false(customElement.hasAttribute('is'),
             'IS attribute should not present if local name is the same as type');
     });
-}, 'Test that the constructor of a type extension does not set the IS attribute if local name is the same as type');
+}, 'Test that the constructor of a custom element does not set the IS attribute if local name is the same as type');
 </script>
 </body>
 </html>
