fixup! Update webvtt reftests to use reftest-wait mechanism.

--- a/webvtt/rendering/cues-with-video/processing-model/navigate_cue_position-1.html
+++ b/webvtt/rendering/cues-with-video/processing-model/navigate_cue_position-1.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="reftest-wait">
+<html>
 <title>WebVTT rendering, cue position after navigation</title>
 <style>
 video {
