--- a/webvtt/rendering/cues-with-video/processing-model/2_tracks.html
+++ b/webvtt/rendering/cues-with-video/processing-model/2_tracks.html
@@ -6,7 +6,7 @@ html { overflow:hidden }
 body { margin:0 }
 </style>
 <script src="/common/reftest-wait.js"></script>
-<video width="1280" height="720" autoplay onplaying="this.onplaying = null; this.pause(); takeScreenshotDelayed(1000);">
+<video width="1280" height="720" autoplay onplaying="this.onplaying = null; this.pause(); takeScreenshot();">
     <source src="/media/white.webm" type="video/webm">
     <source src="/media/white.mp4" type="video/mp4">
     <track src="support/test.vtt">
